--- a/TODO
+++ b/TODO
@@ -1,18 +1,19 @@
-===== Dez 22 2003
+===== Dez 31 2003
 
-Branch: rcssserver3D-0.1
-This branch should be created from the main branch once
-rcssserver3D-add-gamecontrol is merged back. I'd like to release
-rcssserver3D-0.1 on Dec 31 at the latest. Things to do that should be
-included until then are
-- more cleanup for the 'make dist' target (Oliver)
-- generate a document describing general stuff (what can we do now,
-  what's still to do, and want we to do, open issues, where to find help,...)
-- fix bug that sense events do not seem to get back to agents
-- integrate our basic monitor 
+Currently, most soccer specific stuff is missing. Things
+like rules, score, and a real soccer field have to be implemented
+next. The basic infrastructure for all these lacking features has 
+already been created so that a version 0.2 should be ready in near 
+future. 
 
 Branch: rcssserver3D-0.2
+
   - add some control aspects
+    Control aspects will be responsible for setting a game state,
+    controlling the use of effectors and the soccer rules. A first
+    possible control aspect could be one setting the game state (like
+    play_on, before_kick_off, ...). Other CAs in later versions.
+
   - add more effectors / perceptors
 
 Branch: rcssserver3D-0.3
@@ -24,5 +25,4 @@ Branch: rcssserver3D-X.Y
 We are going to add joints and more of the more advanced ODE stuff
 during winter/spring/summer 2004. Joschka from my group here is
 already working on a way to integrate bones into the simulator (so we
-will get articulated creatures).
-
+will get articulated creatures for RoboCup 2005).
