--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-05	pfr	<sserver-admin@lists.sf.net>
+
+	* ./lib/oxygen/spadesserver/spadescreatesenseevent.cpp
+
 2003-12-30  Oliver Obst  <fruit@robolog.org>
 
 	* doc/Makefile.am: 
