--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,8 @@
 2004-01-05	pfr	<sserver-admin@lists.sf.net>
 
 	* ./lib/oxygen/spadesserver/spadescreatesenseevent.cpp
-
+	- Added an include needed for the current CVS version of SPADES
+	
 2003-12-30  Oliver Obst  <fruit@robolog.org>
 
 	* doc/Makefile.am: 
