--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -1,5 +1,5 @@
 %%
-%% $Id: manual.tex,v 1.1 2003/11/14 20:56:16 gato_negro Exp $
+%% $Id: manual.tex,v 1.2 2004/01/07 08:03:10 roboklaus Exp $
 %%----------------------------------------------------------
 %% Soccer Server (aka RoboCup Soccer Simulator) Manual
 %% Masterfile
@@ -120,23 +120,24 @@
 %%% title pages
 \subject{Programming Guide}
 \title{RoboCup Soccer Server 3D \\
-  {\small for Soccer Server 3D Programming Guide Version 1.0 and later}}
+  {\small Version 1.0}}
 \author{
-  Christian Bayha,\\
-  Markus Gr\"{u}ndler,\\
+  Christian Bayha,
+  Klaus Dorer,
+  Markus Gr\"{u}ndler,
   Viktor Pautz,\\
-  Frank Pfaff,\\
+  Frank Pfaff,
   Sebastian Scholl
  }
 %% \date{April 25, 2001\\
 %%  {\footnotesize $7.\alpha$}}
-\publishers{\small %
-  \email{} \\
-  \email{} \\
-  \email{} \\
-  \email{} \\
-  \email{}
-  }
+%\publishers{\small %
+%  \email{} \\
+%  \email{} \\
+%  \email{} \\
+%  \email{} \\
+%  \email{}
+%  }
 
 \lowertitleback{Copyright {\textcopyright} 2001 The RoboCup Federation. Permission is
   granted to copy, distribute and/or modify this document under the
