--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2004-01-22  Oliver Obst  <fruit@robolog.org>
+
+	* plugin/soccer/createeffector/createeffector.cpp: 
+	* plugin/soccer/visionperceptor/visionperceptor.h: 
+	* plugin/soccer/visionperceptor/visionperceptor.cpp: 
+	* plugin/soccer/visionperceptor/visionperceptor_c.cpp: 
+	added new visionperceptor (using spherical coordinates).
+	This stuff works for me, but is is untested.
+	The perceptor returns spherical coordinates (dist angle1 angle2),
+	the angles are returned in degrees.
+
 2004-01-20  Markus Rollmann  <rollmark@uni-koblenz.de>
 
 	* plugin/soccer/Makefile.am: 
