--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -1,5 +1,5 @@
 %%
-%% $Id: manual.tex,v 1.2 2004/01/07 08:03:10 roboklaus Exp $
+%% $Id: manual.tex,v 1.3 2004/01/26 22:05:46 gato_negro Exp $
 %%----------------------------------------------------------
 %% Soccer Server (aka RoboCup Soccer Simulator) Manual
 %% Masterfile
@@ -152,22 +152,22 @@
 
 \tableofcontents
 
-%%% Introduction
+%%% Introduction]
 \input{chapter1/chapter1}
 
-%%% Programming Environment under Linux, Viktor Pautz
+%%% Programming Environment under Linux
 \input{chapter2/chapter2}
 
-%%% Client/Server Protocol, Markus Gründler
+%%% CVS
 \input{chapter3/chapter3}
 
-%%% CPP Unit Test, Sebastian Scholl
+%%% CPP Unit Test
 \input{chapter4/chapter4}
 
-%%% CVS, Bug Tracking and Coding Standard, Frank Pfaff
+%%% Bug Tracking and Coding Standard
 \input{chapter5/chapter5}
 
-%%% Documentation with Latex, Christian Bayha
+%%% Documentation with Latex
 \input{chapter6/chapter6}
 
 \end{document}
